src/docs/assets/main.scss
@use 'color.scss';
@use 'variables.scss';
@use 'code.scss';
@use 'generics.scss';
@use 'table.scss';

@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.6875;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;

  background-color: #{color.$color-base-100};
  color: #{color.$color-base-00};

  &:has(.theme-dark) {
    background-color: #{color.$color-base-05};
    color: #{color.$color-base-100};
    color-scheme: dark;
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  transform-origin: center;
}

